--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-   <header>
-      <nav>
-         <div class="left-nav">
-            <a href="#">Home</a>
-            <a href="#">Profile</a>
+   <header class="navbar">
+      <nav class="container">
+         <div class="navbar-brand">
+            <a class="navbar-item" href="/">Home</a>
+            <a class="navbar-item" href="/profile">Profile</a>
          </div>
-         <div class="right-nav">
+         <div class="navbar-end">
             {{#if loggedIn}}
-            <a href="#">Logout</a>
+            <a class="navbar-item" href="#">Logout</a>
             {{else}}
-            <a href="/login">Login</a>
-            <a href="/signUp">Sign Up</a>
+            <a class="navbar-item" href="/login">Login</a>
+            <a class="navbar-item" href="/signUp">Sign Up</a>
             {{/if}}
          </div>
       </nav>
