Pushing up stylesheet

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,7 @@
          <div class="navbar-end">
             {{#if loggedIn}}
             <a class="navbar-item" href="#">Logout</a>
+            test
             {{else}}
             <a class="navbar-item" href="/login">Login</a>
             <a class="navbar-item" href="/signUp">Sign Up</a>
