--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Expense Tracker</title>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-     <link rel="stylesheet" href="">
+   <link rel="stylesheet" href="../../public/css/style.css">
 </head>
 
 <body>
@@ -32,9 +32,9 @@
       {{{ body }}}
    </main>
 
-  {{#if loggedIn}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
+   {{#if loggedIn}}
+   <script src="/js/logout.js"></script>
+   {{/if}}
 </body>
 
 </html>
