--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,14 +3,23 @@
     <div class="container">
       <div class="columns is-centered">
         <div class="column is-5-tablet is-4-desktop is-3-widescreen">
-          <h3 class="title has-text-white has-text-centered">Login</h3>
-          <hr class="login-hr">
-          <p class="subtitle has-text-white has-text-centered">Please login to track your expense!</p>
+            <h3 class="title has-text-white has-text-centered">Sign Up</h3>
+            <hr class="signup-hr">
+            <p class="subtitle has-text-white has-text-centered">Please Sign Up to track your expense!</p>
           <form action="" class="box">
+            <div class="field">
+              <label for="" class="label">Name</label>
+              <div class="control has-icons-left">
+                <input id="name-signup" type="text" class="input" required>
+                <span class="icon is-small is-left">
+                  <i class="fa fa-envelope"></i>
+                </span>
+              </div>
+            </div>
             <div class="field">
               <label for="" class="label">Email</label>
               <div class="control has-icons-left">
-                <input type="email-login" placeholder="e.g. bobsmith@gmail.com" class="input" required>
+                <input id="email-signup" type="email" placeholder="e.g. bobsmith@gmail.com" class="input" required>
                 <span class="icon is-small is-left">
                   <i class="fa fa-envelope"></i>
                 </span>
@@ -19,7 +28,7 @@
             <div class="field">
               <label for="" class="label">Password</label>
               <div class="control has-icons-left">
-                <input type="password-login" placeholder="*******" class="input" required>
+                <input id="password-signup" type="password" placeholder="*******" class="input" required>
                 <span class="icon is-small is-left">
                   <i class="fa fa-lock"></i>
                 </span>
@@ -28,7 +37,7 @@
         
             <div class="field">
               <button class="button is-success">
-                Login
+                Sign Up
               </button>
             </div>
           </form>
