Adds homepage styling and icons

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,15 @@
-<div class="home-container">
-  <div class="left-column">
-    <div class="logo">
-      <!-- logo image goes here -->
+<div class="section">
+  <div class="columns is-mobile">
+    <div class="column is-half-tablet is-full-mobile">
+      <div class="logo">
+        <!-- logo image goes here -->
+      </div>
+      <div class="title">
+        <h1 class="title is-1">Expense Tracker</h1>
+      </div>
     </div>
-    <div class="title">
-      <h1>Expense Tracker</h1>
+    <div class="column is-half-tablet is-full-mobile has-text-centered">
+      <p>Welcome to Scrooge! This is a fun and engaging platform that helps you keep track of your expenses and manage your finances. It's a gamified version of a finance app, making budgeting and financial management enjoyable and easy. With its simple and intuitive interface, you can quickly and easily record your income and expenses, so you always have a clear understanding of your financial situation. Start taking control of your finances today with Scrooge!</p>
     </div>
-  </div>
-  <div class="right-column">
-    <p>Welcome to Scrooge! This is a simple and easy-to-use platform that helps you keep track of your expenses and manage your finances. </p>
   </div>
 </div>
