new budget form

--- a/views/partials/newBudgetForm.handlebars
+++ b/views/partials/newBudgetForm.handlebars
@@ -1,6 +1,7 @@
-<form action="budget-form" class="box">
+<form action="" class="box">
   <div class="field">
     <label for="" class="label">Amount:</label>
+    
       <div class="control has-icons-left">
       <input type="email-login" placeholder="" class="input">
         <span class="icon is-small is-left">
