correction to homepage based on push review

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,15 +1,13 @@
-<form action="budget-form" class="box">
-  <div class="field">
-    <label for="" class="label">Amount:</label>
-      <div class="control has-icons-left">
-      <input type="email-login" placeholder="" class="input">
-        <span class="icon is-small is-left">
-        <i class="fa fa-money"></i>
-        </span>
-      </div>
+<div class="home-container">
+  <div class="left-column">
+    <div class="logo">
+      <!-- logo image goes here -->
+    </div>
+    <div class="title">
+      <h1>Expense Tracker</h1>
+    </div>
   </div>
-      
-  <div class="field">
-    <button class="button is-success">Add Budget</button>
+  <div class="right-column">
+    <p>Welcome to Scrooge! This is a simple and easy-to-use platform that helps you keep track of your expenses and manage your finances. </p>
   </div>
-</form>
+</div>
