--- a/views/partials/newBudgetForm.handlebars
+++ b/views/partials/newBudgetForm.handlebars
@@ -1,7 +1,6 @@
-<form action="" class="box">
+<form action="budget-form" class="box">
   <div class="field">
     <label for="" class="label">Amount:</label>
-    
       <div class="control has-icons-left">
       <input type="email-login" placeholder="" class="input">
         <span class="icon is-small is-left">
