changes based on review

--- a/views/partials/newBudgetForm.handlebars
+++ b/views/partials/newBudgetForm.handlebars
@@ -1,8 +1,10 @@
-<form action="budget-form" class="box">
+<form class="box">
   <div class="field">
     <label for="" class="label">Amount:</label>
+
+
       <div class="control has-icons-left">
-      <input type="email-login" placeholder="" class="input">
+      <input type="text" class="input">
         <span class="icon is-small is-left">
         <i class="fa fa-money"></i>
         </span>
