--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,7 +19,7 @@
             <div class="field">
               <label for="" class="label">Password</label>
               <div class="control has-icons-left">
-                <input type="password-login" placeholder="*******" class="input" required>
+                <input type="password" placeholder="*******" class="input" required>
                 <span class="icon is-small is-left">
                   <i class="fa fa-lock"></i>
                 </span>
