--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,8 +1,9 @@
 <div id="template">
    <aside class="menu">
-      <p class="menu-label">Actions</p>
+    <br>
+      <p class="menu-label is-size-4">Actions</p>
       <ul class="menu-list">
-         <li><button id="add-transactions-button" class="button is-primary">Add Transactions</button></li>
+         <li><button id="add-transactions-button" class="button is-primary">Add Transaction</button></li><br>
          <li><button id="set-budget-button" class="button is-primary">Set Budget</button></li>
       </ul>
    </aside>
@@ -33,7 +34,7 @@
    </main>
 </div>
 
-<div id="transactions-partial">
+<section id="transactions-partial">
    <table class="table is-fullwidth">
       <thead>
          <tr>
@@ -51,4 +52,51 @@
          {{/each}}
       </tbody>
    </table>
+</section>
+
+<div class="container" style="display:none;">
+  <div class="columns is-justify-content-center">
+    <div class="column is-6-tablet is-5-desktop is-4-widescreen is-3-fullh">
+      <br>
+      <h2 class="has-text-centered has-text-link is-size-5">Post a new transaction</h2><br>
+      <form action="" class="box p-5">
+        <label class="is-block mb-4">
+          <span class="is-block mb-2 is-size-5">Date</span>
+          <input required type="date" class="input" id="transDate"/>
+        </label><br>
+
+        <label class="is-block mb-4">
+          <span class="is-block mb-2 is-size-5">Category</span>   
+         <input type="radio" name="category" id="income" checked>
+         Income
+        <input type="radio" name="category" id="expense">
+         Expense
+         </label><br>
+       
+         <label class="is-block mb-4">
+          <span class="is-block mb-2 is-size-5">Sub Category</span>
+          <input required type="text" class="input" id="transSubCat"/>
+        </label><br>
+       
+         <label class="is-block mb-4">
+          <span class="is-block mb-2 is-size-5">Description</span>
+          <input required type="text" class="input" id="transDesc"/>
+        </label><br>
+       
+         <label class="is-block mb-4">
+          <span class="is-block mb-2 is-size-5">Amount</span>
+          <input required type="text" class="input" id="transAmount"/>
+        </label>
+        <br>
+       
+        <div class="mb-4">
+          <button type="submit" class="button is-link px-4 ">Add Transaction</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
+
+
+<script src="./js/addTransaction.js"></script>
+<script src="./js/budgetChart.js"></script>
