--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -54,11 +54,11 @@
    </table>
 </section>
 
-<div class="container" style="display:none;">
+<div class="container" style="display:none;" id="newTransForm">
   <div class="columns is-justify-content-center">
     <div class="column is-6-tablet is-5-desktop is-4-widescreen is-3-fullh">
       <br>
-      <h2 class="has-text-centered has-text-link is-size-5">Post a new transaction</h2><br>
+      <h2 class="has-text-centered has-text-link is-size-5 is-capitalized">Post a new transaction</h2><br>
       <form action="" class="box p-5">
         <label class="is-block mb-4">
           <span class="is-block mb-2 is-size-5">Date</span>
@@ -67,9 +67,9 @@
 
         <label class="is-block mb-4">
           <span class="is-block mb-2 is-size-5">Category</span>   
-         <input type="radio" name="category" id="income" checked>
+         <input type="radio" name="category" value="income" checked>
          Income
-        <input type="radio" name="category" id="expense">
+        <input type="radio" name="category" value="expense">
          Expense
          </label><br>
        
@@ -90,7 +90,7 @@
         <br>
        
         <div class="mb-4">
-          <button type="submit" class="button is-link px-4 ">Add Transaction</button>
+          <button type="submit" class="button is-link px-4 " id="postTransaction">Add Transaction</button>
         </div>
       </form>
     </div>
