basic chart implmenation

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,8 +3,8 @@
     <br>
       <p class="menu-label is-size-4">Actions</p>
       <ul class="menu-list">
-         <li><button id="add-transactions-button" class="button is-primary">Add Transaction</button></li><br>
-         <li><button id="set-budget-button" class="button is-primary">Set Budget</button></li>
+         <li><button id="add-transactions-button" class="button is-link">Add Transaction</button></li><br>
+         <li><button id="set-budget-button" class="button is-link">Set Budget</button></li>
       </ul>
    </aside>
 
@@ -23,7 +23,7 @@
 
       <div class="columns">
          <div class="column">
-            <canvas id="chart"></canvas>
+            <canvas id="chart" style="width:100%;max-width:600px"></canvas>
             {{! chart.js chart goes here }}
          </div>
       </div>
