Added log in feature

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,7 +6,7 @@
             <h3 class="title has-text-white has-text-centered">Sign Up</h3>
             <hr class="signup-hr">
             <p class="subtitle has-text-white has-text-centered">Please Sign Up to track your expense!</p>
-          <form action="" class="box">
+          <form action="" class="box signup-form">
             <div class="field">
               <label for="" class="label">Name</label>
               <div class="control has-icons-left">
@@ -36,7 +36,7 @@
             </div>
         
             <div class="field">
-              <button class="button is-success">
+              <button class="button is-success" id="signUpBtn">
                 Sign Up
               </button>
             </div>
@@ -46,3 +46,5 @@
     </div>
   </div>
 </section>
+
+<script src="/js/signUp.js"></script>
