--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
 
                <div class="navbar-end">
                   {{#if loggedIn}}
-                  <a class="navbar-item" href="#">Logout</a>
+                  <a class="navbar-item" href="/logout">Logout</a>
                   {{else}}
                   <div class="navbar-item">
                      <div class="buttons">
