--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -11,13 +11,13 @@
   <main class="section">
     <div class="columns">
       <div class="column">
-        <p>Income: {{income}}</p>
+        <p class="has-text-weight-bold">Income: {{income}}</p>
       </div>
       <div class="column">
-        <p>Expense: {{expense}}</p>
+        <p class="has-text-weight-bold">Expense: {{expense}}</p>
       </div>
       <div class="column">
-        <p>Budget: {{budget}}</p>
+        <p class="has-text-weight-bold">Budget: {{budget}}</p>
       </div>
     </div>
 
