--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -28,7 +28,7 @@
             <div class="field">
               <label for="" class="label">Password</label>
               <div class="control has-icons-left">
-                <input id="password-signup" type="password" placeholder="*******" class="input" required>
+                <input id="password-signup" type="password" placeholder="**Min 8 Chars**" class="input" required>
                 <span class="icon is-small is-left">
                   <i class="fa fa-lock"></i>
                 </span>
