--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -75,12 +75,12 @@
   <div class="columns is-justify-content-center">
     <div class="column is-6-tablet is-5-desktop is-4-widescreen is-3-fullh">
       <br>
-      <h2 class="has-text-centered has-text-link is-size-5 is-capitalized">Post a new transaction</h2><br>
+      <h2 class="has-text-centered has-text-link is-size-5 has-text-weight-bold">Post a new transaction</h2>
       <form action="" class="box p-5">
         <label class="is-block mb-4">
           <span class="is-block mb-2 is-size-5">Date</span>
           <input required type="date" class="input" id="transDate" />
-        </label><br>
+        </label>
 
         <label class="is-block mb-4">
           <span class="is-block mb-2 is-size-5">Category</span>
@@ -88,23 +88,23 @@
           Income
           <input type="radio" name="category" value="expense">
           Expense
-        </label><br>
+        </label>
 
         <label class="is-block mb-4">
           <span class="is-block mb-2 is-size-5">Sub Category</span>
           <input required type="text" class="input" id="transSubCat" />
-        </label><br>
+        </label>
 
         <label class="is-block mb-4">
           <span class="is-block mb-2 is-size-5">Description</span>
           <input required type="text" class="input" id="transDesc" />
-        </label><br>
+        </label>
 
         <label class="is-block mb-4">
           <span class="is-block mb-2 is-size-5">Amount</span>
           <input required type="text" class="input" id="transAmount" />
         </label>
-        <br>
+        
 
         <div class="mb-4">
           <button type="submit" class="button is-link px-4 " id="postTransaction">Add Transaction</button>
@@ -118,12 +118,10 @@
   <div class="columns is-justify-content-center">
     <div class="column is-6-tablet is-5-desktop is-4-widescreen is-3-fullh">
       <br>
-      <h2 class="has-text-centered has-text-link is-size-5 is-capitalized">Set a new budget</h2><br>
+      <h2 class="has-text-centered has-text-link is-size-5 has-text-weight-bold">Set a new budget</h2>
       <form class="box">
         <div class="field">
           <label for="" class="label">Amount:</label>
-
-
           <div class="control has-icons-left">
             <input type="text" class="input" id="budgetAmount">
             <span class="icon is-small is-left">
