--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -131,7 +131,7 @@
         </div>
 
         <div class="field">
-          <button class="button is-success" id="addBudgetBtn">Add Budget</button>
+          <button class="button is-link" id="addBudgetBtn">Add Budget</button>
         </div>
       </form>
     </div>
