--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,7 +12,6 @@
     <div class="columns">
       <div class="column">
         <p class="has-text-weight-bold">Income:</p><input type="label" value={{sumIncome}} id="income"/>
-        {{!-- <p class="has-text-weight-bold">Income:</p><span class="tag"id="income" value="{{sumIncome}}"> {{sumIncome}} </span> --}}
       </div>
       <div class="column">
         <p class="has-text-weight-bold">Expense:</p><input type="label" value={{sumExpense}} id="expense"/>
@@ -28,10 +27,15 @@
         {{! chart.js chart goes here }}
       </div>
     </div>
+  
+  
+  
+  
+  
   </main>
 </div>
 
-
+<div>
 <section id="transactions-partial">
   <div class="is-bordered box">
     <table class="table is-hoverable is-striped is-fullwidth">
@@ -77,6 +81,8 @@
     </table>
   </div>
 </section>
+
+
 
 <div class="container" style="display:none;" id="newTransForm">
   <div class="columns is-justify-content-center">
@@ -143,7 +149,9 @@
     </div>
   </div>
 </div>
+</div>
 
 <script src="./js/addTransaction.js"></script>
 <script src="./js/budgetChart.js"></script>
 <script src="./js/addBudget.js"></script>
+<script src="./js/formSwitch.js"></script>
