--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,8 @@
     </a>
                <a class="navbar-item has-text-link has-text-weight-bold" href="/">Home</a>
                <a class="navbar-item has-text-link has-text-weight-bold" href="/profile">Profile</a>
+               <a class="navbar-item has-text-link has-text-weight-bold" href="/challenges">Challenges</a>
+
             </div>
 
                <div class="navbar-end">
