--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -14,8 +14,9 @@
     {{/each}}
     {{else}}
     <h3>You currently have no challenges.</h3>
+    {{/if}}
   </ul>
-  <button class="button is-success">Add Challenge</button>
+  <button class="button is-link">Add Challenge</button>
    <div>
     <p>Drive yourself closer to financial success by adding challenges and gaining stars. </p>
     <p>Set challenges yourself to personalize your financial journey. Now challenge is too big or too small. Start small an work your way up. These are personalized goals for you to work on your financial habits. Everyone is going to have different goals but here are some examples.</p>
