fixes flex container on homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <div class="section">
-  <div class="columns is-mobile">
+  <div class="columns is-mobile is-multiline">
     <div class="column is-half-tablet is-full-mobile">
       <div class="logo">
         <!-- logo image goes here -->
