--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -19,7 +19,7 @@
   <button class="button is-link ml-5" id="add-challenge-btn">Add Challenge</button><br><br>
    <div class="ml-5">
     <p>Drive yourself closer to financial success by adding challenges and gaining stars. </p>
-    <p>Set challenges yourself to personalize your financial journey. Now challenge is too big or too small. Start small an work your way up. 
+    <p>Set challenges yourself to personalize your financial journey. No challenge is too big or too small. Start small an work your way up. 
       These are personalized goals for you to work on your financial habits.
        Everyone is going to have different goals but here are some examples.</p>
     <ul>
