--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -1,13 +1,13 @@
 <div>
-  <h3 class="title is-size-3 has-text-centered has-text-danger">Welcome to your Challenge Dashboard</h3>
+  <h3 class="title is-size-3 has-text-center has-text-danger">Welcome to your Challenge Dashboard</h3>
   <ul>
     {{!-- variables are placeholders--}}
     {{#if challenges}}
     {{#each challenges}}
-    <li class="is-flex-direction-row	">
+    <li class="is-flex-direction-row">
       <input class="button is-success is-small" type="checkbox"/>
-      <p>{{challenge.content}}</p>
-      {{#if challenge.reward}}
+      <p>{{this.content}}</p>
+      {{#if this.badge}}
       <i class="fad fa-star  Warning"></i>
       {{/if}}
     </li>
@@ -16,16 +16,19 @@
     <h3>You currently have no challenges.</h3><br>
     {{/if}}
   </ul>
+
   <button class="button is-link" id="add-challenge-btn">Add Challenge</button><br><br>
    <div>
     <p>Drive yourself closer to financial success by adding challenges and gaining stars. </p>
     <p>Set challenges yourself to personalize your financial journey. Now challenge is too big or too small. Start small an work your way up. 
       These are personalized goals for you to work on your financial habits.
-       Everyone is going to have different goals but here are some examples.</p>
+       Everyone is going to have different goals but here are some examples:</p>
+
     <ul>
       <li>Go a whole day without spending money!</li>
       <li>One week with no coffee shop coffee.</li>
     </ul>
+    
   </div>
   <div class="container" style="display:none;" id="newChallengeForm">
   <div class="columns is-justify-content-center">
