--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
 
 
 .logo {
-   background-image: url(../images/logo1.png);
+   background-image: url(../images/logo.png);
    background-size: contain;
    background-repeat: no-repeat;
    height: 400px;
