--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,12 +1,5 @@
 <div id="template">
-  <aside class="menu">
-    <br>
-    <p class="menu-label is-size-4 ml-5">Actions</p>
-    <ul class="menu-list">
-      <li><button id="add-transactions-button" class="button is-link ml-5">Add Transaction</button></li><br>
-      <li><button id="set-budget-button" class="button is-link ml-5">Set Budget</button></li>
-    </ul>
-  </aside>
+    <h3 class="title is-size-3 has-text-centered has-text-danger">Track your transactions</h3>
 
   <main class="section">
     <div class="columns">
@@ -29,6 +22,14 @@
     </div>
   </main>
 </div>
+<aside class="menu">
+    <br>
+    <p class="menu-label is-size-4 ml-5">Actions</p>
+    <ul class="menu-list">
+      <li><button id="add-transactions-button" class="button is-link ml-5">Add Transaction</button></li><br>
+      <li><button id="set-budget-button" class="button is-link ml-5">Set Budget</button></li>
+    </ul>
+  </aside>
 
 <div>
 <section id="transactions-partial">
