--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
 
                <div class="navbar-end">
                   {{#if loggedIn}}
-                  <a class="navbar-item button is-danger has-text-weight-bold mr-2" id="logout">Logout</a>
+                  <a class="navbar-item button has-text-weight-bold mr-2" id="logout">Logout</a>
                   {{else}}
                   <div class="navbar-item">
                      <div class="buttons">
