--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,15 @@
    --font-size: 1.5rem;
 }
 
+::-webkit-scrollbar {
+   width: 8px;
+   border-radius: 10px;
+ }
+ 
+ ::-webkit-scrollbar-thumb {
+   border-radius: 10px;
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+ }
 
 .logo {
    background-image: url(../images/logo.png);
@@ -16,43 +25,53 @@
 
 p {
    font-size: 18px;
+   margin: 5px;
 }
-
-/* .section {
-   border-radius: 10px;
-   background-color: var(--secondary);
-} */
 
 .title {
    border-radius: 10px;
    background-color: var(--tertiary);
 }
 
-/* TEMPORARY */
-
-
-/* aside.menu {
-   width: 33.33%;
-   float: left;
- }
-
- main.section {
-   width: 66.66%;
-   float: right;
- }
-
- .columns {
-   width: 100%;
- }
-
-.button:hover {
-   cursor: pointer;
+.challenge-card-container {
+  list-style: none;
+  padding: 0;
+  align-items: center;
 }
 
-.button:hover::before {
-   cursor: pointer;
+.challenge-card {
+  background-color: #FFFF8F;
+  margin-top: 10px;
+  padding: 10px;
+  margin: 15px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.43) 0px 5px 15px;
+  font-weight: bolder;
 }
 
-.button:hover::after {
-   cursor: pointer;
-} */
+#challenge-header {
+   font-size: 36px;
+   margin: 5px;
+}
+
+#chall-inst-container {
+   background-color: white;
+   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+   border-radius: 10px;
+   padding: 20px;
+}
+
+#chall-inst-header{
+   font-size: 26px;
+}
+
+@media screen and (max-width: 1024px) {
+   .navbar-item {
+   display: flex;
+   justify-content: center;
+   }
+   .navBtn {
+   width: 75%;
+   margin: 0 auto;
+   }
+   }
