--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,13 +1,13 @@
 <div id="template">
-    <h3 class="title is-size-3 has-text-centered has-text-danger">Track your transactions</h3>
+  <h3 class="title is-size-3 has-text-centered has-text-danger">Track your transactions</h3>
 
   <main class="section">
     <div class="columns">
       <div class="column">
-        <p class="has-text-weight-bold">Income:</p><input type="label" value={{sumIncome}} id="income"/>
+        <p class="has-text-weight-bold">Income:</p><input type="label" value={{sumIncome}} id="income" />
       </div>
       <div class="column">
-        <p class="has-text-weight-bold">Expense:</p><input type="label" value={{sumExpense}} id="expense"/>
+        <p class="has-text-weight-bold">Expense:</p><input type="label" value={{sumExpense}} id="expense" />
       </div>
       <div class="column">
         <p class="has-text-weight-bold" id="budget">Budget: {{budget.amount}}</p>
@@ -23,126 +23,128 @@
   </main>
 </div>
 <aside class="menu">
-    <br>
-    <p class="menu-label is-size-4 ml-5">Actions</p>
-    <ul class="menu-list">
-      <li><button id="add-transactions-button" class="button is-link ml-5">Add Transaction</button></li><br>
-      <li><button id="set-budget-button" class="button is-link ml-5">Set Budget</button></li>
-    </ul>
-  </aside>
+  <br>
+  <p class="menu-label is-size-4 ml-5">Actions</p>
+  <ul class="menu-list">
+    <li><button id="add-transactions-button" class="button is-link ml-5">Add Transaction</button></li><br>
+    <li><button id="set-budget-button" class="button is-link ml-5">Set Budget</button></li>
+  </ul>
+</aside>
 
 <div>
-<section id="transactions-partial">
-  <div class="is-bordered box">
-    <table class="table is-hoverable is-striped is-fullwidth">
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Category</th>
-          <th>Subcategory</th>
-          <th>Description</abbr></th>
-          <th>Amount</th>
-        </tr>
-      </thead>
-      <tfoot>
-        <tr>
-          <th>Date</th>
-          <th>Category</th>
-          <th>Subcategory</th>
-          <th>Description</abbr></th>
-          <th>Amount</th>
-        </tr>
-      </tfoot>
+  <section id="transactions-partial">
+    <div class="is-bordered box">
+      <table class="table is-hoverable is-striped is-fullwidth">
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Category</th>
+            <th>Subcategory</th>
+            <th>Description</abbr></th>
+            <th>Amount</th>
+          </tr>
+        </thead>
+        <tfoot>
+          <tr>
+            <th>Date</th>
+            <th>Category</th>
+            <th>Subcategory</th>
+            <th>Description</abbr></th>
+            <th>Amount</th>
+          </tr>
+        </tfoot>
 
-      <tbody>
-        {{#if transactions}}
-        {{#each transactions as |trans|}}
-        <tr>
-          <td>{{format_date trans.date}}</td>
-          <td><strong>{{trans.category}}</strong>
-          </td>
-          <td>{{trans.subcategory}}</td>
-          <td>{{trans.description}}</td>
-          <td>{{trans.amount}}</td>
-        </tr>
-        {{/each}}
-        {{else}}
-        <tr>
-          <td>
-            No data Available
-          </td>
-        </tr>
-        {{/if}}
-      </tbody>
-    </table>
-  </div>
-</section>
+        <tbody>
+          {{#if transactions}}
+          {{#each transactions as |trans|}}
+          <tr>
+            <td>{{format_date trans.date}}</td>
+            <td><strong>{{trans.category}}</strong>
+            </td>
+            <td>{{trans.subcategory}}</td>
+            <td>{{trans.description}}</td>
+            <td>{{trans.amount}}</td>
+          </tr>
+          {{/each}}
+          {{else}}
+          <tr>
+            <td>
+              No data Available
+            </td>
+          </tr>
+          {{/if}}
+        </tbody>
+      </table>
+    </div>
+  </section>
 
 
 
-<div class="container" style="display:none;" id="newTransForm">
-  <div class="columns is-justify-content-center">
-    <div class="column is-6-tablet is-5-desktop is-4-widescreen is-3-fullh">
-      <br>
-      <h2 class="has-text-centered has-text-link is-size-5 has-text-weight-bold">Post a new transaction</h2>
-      <form action="" class="box p-5">
-        <label class="is-block mb-4">
-          <span class="is-block mb-2 is-size-5">Date</span>
-          <input required type="date" class="input" id="transDate" />
-        </label>
+  <div class="container" style="display:none;" id="newTransForm">
+    <div class="columns is-justify-content-center">
+      <div class="column is-6-tablet is-5-desktop is-4-widescreen is-3-fullh">
+        <br>
+        <h2 class="has-text-centered has-text-link is-size-5 has-text-weight-bold">Post a new transaction</h2>
+        <form action="" class="box p-5">
+          <label class="is-block mb-4">
+            <span class="is-block mb-2 is-size-5">Date</span>
+            <input required type="date" class="input" id="transDate" />
+          </label>
 
-        <label class="is-block mb-4">
-          <span class="is-block mb-2 is-size-5">Category</span>
-          <input type="radio" name="category" value="income" checked>
-          Income
-          <input type="radio" name="category" value="expense">
-          Expense
-        </label>
+          <label class="is-block mb-4">
+            <span class="is-block mb-2 is-size-5">Category</span>
+            <input type="radio" name="category" value="income" checked>
+            Income
+            <input type="radio" name="category" value="expense">
+            Expense
+          </label>
 
-        <label class="is-block mb-4">
-          <span class="is-block mb-2 is-size-5">Sub Category</span>
-          <input required type="text" class="input" id="transSubCat" />
-        </label>
+          <label class="is-block mb-4">
+            <span class="is-block mb-2 is-size-5">Sub Category</span>
+            <input required type="text" class="input" id="transSubCat" />
+          </label>
 
-        <label class="is-block mb-4">
-          <span class="is-block mb-2 is-size-5">Description</span>
-          <input required type="text" class="input" id="transDesc" />
-        </label>
+          <label class="is-block mb-4">
+            <span class="is-block mb-2 is-size-5">Description</span>
+            <input required type="text" class="input" id="transDesc" />
+          </label>
 
-        <label class="is-block mb-4">
-          <span class="is-block mb-2 is-size-5">Amount</span>
-          <input required type="text" class="input" id="transAmount" />
-        </label>
+          <label class="is-block mb-4">
+            <span class="is-block mb-2 is-size-5">Amount</span>
+            <input required type="text" class="input" id="transAmount" />
+          </label>
 
-        <div class="mb-4">
-          <button type="submit" class="button is-link px-4 " id="postTransaction">Add Transaction</button>
-        </div>
-      </form>
+          <div class="mb-4">
+            <button type="submit" class="button is-link px-4 " id="postTransaction">Add Transaction</button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="container" style="display:none;" id="newBudgetForm">
-  <div class="columns is-justify-content-center">
-    <div class="column is-6-tablet is-5-desktop is-4-widescreen is-3-fullh">
-      <br>
-      <h2 class="has-text-centered has-text-link is-size-5 has-text-weight-bold">Set a new budget</h2>
-      <form class="box">
-        <div class="field">
-          <label for="" class="label">Amount:</label>
-          <div class="control has-icons-left">
-            <input type="text" class="input" id="budgetAmount">
-            <span class="icon is-small is-left">
-              <i class="fa fa-money"></i>
-            </span>
+  <div class="container" style="display:none;" id="newBudgetForm">
+    <div class="columns is-justify-content-center">
+      <div class="column is-6-tablet is-5-desktop is-4-widescreen is-3-fullh">
+        <br>
+        <h2 class="has-text-centered has-text-link is-size-5 has-text-weight-bold">Set a new budget</h2>
+        <form class="box">
+          <div class="field">
+            <label for="" class="label">Amount:</label>
+            <div class="control has-icons-left">
+              <input type="text" class="input" id="budgetAmount">
+              <span class="icon is-small is-left">
+                <i class="fa fa-money"></i>
+              </span>
+            </div>
           </div>
-        </div>
 
-        <div class="field">
-            {{#if budget === 0}}
+          <div class="field">
+            {{#if budget.amount}}
+            <button class="button is-link" id="setBudgetBtn" disabled>Set Budget</button>
             <button class="button is-link" id="editBudgetBtn">Edit Budget</button>
             {{else}}
             <button class="button is-link" id="setBudgetBtn">Set Budget</button>
+            <button class="button is-link" id="editBudgetBtn" disabled>Edit Budget</button>
             {{/if}}
           </div>
         </form>
@@ -154,4 +156,3 @@
 <script src="./js/addTransaction.js"></script>
 <script src="./js/budgetChart.js"></script>
 <script src="./js/addBudget.js"></script>
-<script src="./js/formSwitch.js"></script>
