challenge page updates to form and button placement as well as list order and addition of startCount

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@ p {
 }
 
 .challenge-card {
-  background-color: #FFFF8F;
+  background-color: #f7ecd9;
   margin-top: 10px;
   padding: 10px;
   margin: 15px;
