--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,10 +4,10 @@
   <main class="section">
     <div class="columns">
       <div class="column">
-        <p class="has-text-weight-bold">Income:</p><input type="label" value={{sumIncome}} id="income" />
+        <p class="has-text-weight-bold">Income:<span id="income"> {{sumIncome}} </span></p>
       </div>
       <div class="column">
-        <p class="has-text-weight-bold">Expense:</p><input type="label" value={{sumExpense}} id="expense" />
+        <p class="has-text-weight-bold">Expense:<span id="expense"> {{sumExpense}} </span></p>
       </div>
       <div class="column">
         <p class="has-text-weight-bold" id="budget">Budget: {{budget.amount}}</p>
