--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -63,5 +63,28 @@
     </ul>
 
   </article>
+
+  <article class="ml-5" id="quest-container">
+
+  <h4 class='has-text-centered' id="quest-header">Earn enough stars and complete quests!</h4>
+  <br>
+  
+  <div class="columns is-multiline" id="quest-list">
+    {{#each quests}}
+      <div class="column is-4-desktop is-6-tablet">
+        <div class="quest-card">
+          <div class="quest-image">
+            <img src="{{this.image}}" alt="{{this.id}}">
+          </div>
+          <div class="quest-details">
+            <h5 class="quest-title">{{this.id}}</h5>
+            <p class="quest-description">{{this.description}}</p>
+          </div>
+        </div>
+      </div>
+    {{/each}}
+  </div>
+
+</article>
 </div>
   <script src="./js/addChallenge.js"></script>
