--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
       <header>
          <nav class="navbar is-flex-direction-row" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-               <a class="navbar-item" href="/"><img src="/images/mini.png" width="25" height="25"></a>
+               <a class="navbar-item" href="/"><img src={{avatar}} width="25" height="25"></a>
                <a class="navbar-item has-text-link has-text-weight-bold" href="/">Home</a>
                 {{#if loggedIn}}
                <a class="navbar-item has-text-link has-text-weight-bold" href="/profile">Profile</a>
